[tool.poetry]
name = "refractiveindexlibrary"
version = "0.0.4"
description = ""
authors = ["Victor Liu <victor.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.3"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
